--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,31 @@
-#cy {
+#maincontent {
     width: 100%;
     min-height: -webkit-fill-available;
     min-height: 100vh;
     border: 1px solid black;
+}
+
+#cy {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+@media (min-width: 768px) {
+    .button-bottom-right {
+        visibility: hidden;
+    }
+}
+
+.button-bottom-right {
+    width: 100px;
+    height: 100px;
+    background-color: #aaa;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 100;
+    border-radius: 50%;
 }
 
 /* Make sidebar high enough even if image/video is not loaded yet so that scrolling works */
