--- a/src/style.css
+++ b/src/style.css
@@ -7,8 +7,14 @@
 
 #cy {
     width: 100%;
-    height: 100%;
+    height: 80%;
     z-index: 1;
+}
+
+#sequence {
+    width: 100%;
+    height: 20%;
+    border-top: 1px solid black;
 }
 
 @media (min-width: 768px) {
